--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -10,8 +10,8 @@
 .section{
 	background-color: grey;
 	border: 2px solid black;
-	margin-left: 1%;
-	margin-right: 1%;
+	margin-left: 10px;
+	margin-right: 10px;
 	margin-bottom: 15px;
 	display: inline-block;
 }
@@ -19,13 +19,22 @@
 	background-color: pink;
 	font-size: 125%;
 	font-weight: bold;
-	border: 1px solid black;
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
 	position: relative;
 	float: right;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
+}
+
+.sectionTitle1{
+	background-color: yellow;
+}
+
+.sectionTitle2{
+	background-color: lightgreen;
 }
 
 .contentText{
@@ -46,6 +55,9 @@
 @media (min-width: 768px) and (max-width: 991px) {
   .section-md-6 {
     width: 47%;
+  }
+  .section-md-12 {
+  	width: 96.5%;
   }
   }
 
